calendar fdow converted to global setting added jira data center support more expressive page titles fixed some typos

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -61,7 +61,7 @@ plugin.setting.working.day=Working Days
 plugin.setting.ispopup=Type
 plugin.setting.isactualdate=Default date
 plugin.setting.non.working.issues= Non-working issues
-plugin.setting.nonestimated.issues= Non-estimted issues
+plugin.setting.nonestimated.issues= Non-estimated issues
 plugin.setting.popup=Pop-up
 plugin.setting.inline=Inline
 plugin.setting.both=Both types of calendars
@@ -76,16 +76,16 @@ plugin.setting.non.working.issues.help=The issues that match any of the regular 
 plugin.setting.nonestimated.issues.help=By default a mail will be sent every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead. With this setting administrators can provide a list of regular expressions which issues should be excluded from the check. Examples: If you do not want to get e-mails at all the ".*" setting is for you. If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
 plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays). The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
 plugin.setting.include.dates.help=List of days that are weekends yet working days. The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
-plugin.parse.exception.exclude=Exception while try to parse the exculde date(s). Wrong dates: 
+plugin.parse.exception.exclude=Exception while try to parse the exclude date(s). Wrong dates: 
 plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates: 
 plugin.setting.start.time.change.wrong=The startTime change value not correct. The valid values: 5, 10, 15, 20, 30.
 plugin.setting.end.time.change.wrong=The endTime change value not correct. The valid values: 5, 10, 15, 20, 30.
 plugin.settings.time.format=Exception while try to parse the time. Wrong value: 
 plugin.setting.input.fields.settings=Input fields settings
 plugin.setting.starttime.value=StartTime Change value
-plugin.setting.starttime.help=You can set the value of the startTime input field Now button rounding funcition. Acceptable values: 5, 10, 15, 20, 30.
+plugin.setting.starttime.help=You can set the value of the startTime input field Now button rounding function. Acceptable values: 5, 10, 15, 20, 30.
 plugin.setting.endtime.value=EndTime Change value
-plugin.setting.endtime.help=You can set the value of the endTime input field Now button rounding funcition. Acceptable values: 5, 10, 15, 20, 30.
+plugin.setting.endtime.help=You can set the value of the endTime input field Now button rounding function. Acceptable values: 5, 10, 15, 20, 30.
 plugin.setting.min= Minute(s)
 plugin.setting.coloring= Highlights
 plugin.setting.coloring.help=You can turn on/off the calendar highlight function. The highlights show the exclude dates like weekends (red number) and the days with worklog (yellow background).  
