--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -54,9 +54,9 @@ plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t
 plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
 plugin.parent.issue=Sz\u00fcl\u0151 Issue:
 
-plugin.setting.calendar.appearance=Kalend\u00e1r megjelen\u00e9se
-plugin.setting.calendar=Kalend\u00e1r
-plugin.setting.calendar.settings.help=Egys\u00e9ges kalend\u00e1r be\u00e1llít\u00e1sok az \u00d6sszes felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra.
+plugin.setting.calendar.appearance=Napt\u00e1r megjelen\u00e9se
+plugin.setting.calendar=Napt\u00e1r
+plugin.setting.calendar.settings.help=Egys\u00e9ges napt\u00e1r be\u00e1llít\u00e1sok az \u00d6sszes felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra.
 plugin.setting.working.day=Munkanapok
 plugin.setting.ispopup=T\u00edpusa
 plugin.setting.isactualdate=Alap\u00e9rtelmezett d\u00e1tum
@@ -64,14 +64,14 @@ plugin.setting.non.working.issues=Nem val\u00f3s munka feladatok
 plugin.setting.nonestimated.issues=Becs\u00fcletlen idej\u0171 feladatok
 plugin.setting.popup=Felugr\u00f3
 plugin.setting.inline=\u00c1lland\u00f3
-plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa kalend\u00e1r
+plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa napt\u00e1r
 plugin.setting.current=Mai d\u00e1tum
 plugin.setting.last=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
-plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak 8 \u00f3r\u00e1nyni munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00f3l\u00f3 nem dolgozik 8 \u00f3r\u00e1t egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A kalend\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151 napnak sz\u00e1m\u00edt.
+plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak 8 \u00f3r\u00e1nyni munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00f3l\u00f3 nem dolgozik 8 \u00f3r\u00e1t egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A napt\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151 napnak sz\u00e1m\u00edt.
 plugin.setting.exclude.dates=Nem sz\u00e1m\u00edt\u00f3 d\u00e1tumok
 plugin.setting.include.dates=Bele sz\u00e1m\u00edt\u00f3 d\u00e1tumok
-plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a kalend\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00f3 kalend\u00e1rt a Timetrecker oldal\u00e1n.
-plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a kalend\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki ntm t\u00f6lt\u00f6tt napj\u00e1t mutassa.
+plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a napt\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00f3 napt\u00e1rt a Timetrecker oldal\u00e1n.
+plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a napt\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki ntm t\u00f6lt\u00f6tt napj\u00e1t mutassa.
 plugin.setting.non.working.issues.help=Az issue-k amelyek megfelelnek a list\u00e1ban szerepl\u0151 regul\u00e1ris kifejez\u00e9seknek nem lesznek figyelembe v\u00e9ve a "Val\u00f3s Munka \u00d6sszes\u00edt\u00e9s"-ben.
 plugin.setting.nonestimated.issues.help=Alap\u00e9rtelmezetten egy lev\u00e9l lesz k\u00fcldve minden nap a nem lez\u00e1rt issue-kr\u00f3l ahol worklog keletkezett de nincs t\u00f6bb h\u00e1tral\u00e9v\u0151 id\u0151, issue reporter \u00e9s a project vezet\u0151 kapja a levelet. Ezzel a be\u00e1ll\u00edt\u00e1ssal az adminisztr\u00e1torok egy regul\u00e1ris kifejezez\u00e9s list\u00e1t adhatnak meg, hogy melyik issue-k maradjanak ki az ellen\u0151rz\u00e9sb\u0151l. P\u00e9ld\u00e1k: Ha nem akarsz emial-t kapni semmir\u0151l, akkor a ".*" be\u00e1ll\u00edt\u00e1sra van sz\u00fcks\u00e9ged. Ha nem akarod a "MYPROJECT" bele\u00e9rteni akkor neked a k\u00f6vetkez\u0151 kifejez\u00e9st kell megadnod a list\u00e1ba "MYPROJECT-.*".
 plugin.setting.exclude.dates.help=H\u00e9tk\u00f6znapok list\u00e1ja amelyek nem sz\u00e1m\u00edtanak munkanapnak (P\u00e9ld\u00e1ul: nemzeti \u00fcnnepek). A d\u00e1tumok form\u00e1tuma yyyy-MM-dd (2013-01-01) az elv\u00e1laszt\u00f3jel pedig ",".
@@ -88,7 +88,7 @@ plugin.setting.endtime.value=V\u00e9ge mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak
 plugin.setting.endtime.help=Megadhat\u00f3 a V\u00e9ge mez\u0151 Most gombj\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.min= perc
 plugin.setting.coloring=Kiemel\u00e9s
-plugin.setting.coloring.help=Ki \u00e9s be kapcsolhatod a kalend\u00e1r kiemel\u0151 funkci\u00f3j\u00e1t. A kiemel\u0151 funcki\u00f3 mutatja a nem munka napnak sz\u00e1m\u00edt\u00f3 napokat h\u00e9tv\u00e9g\u00e9nek megfelel\u0151en (piros sz\u00e1m) \u00e9s a napokat amelyen worklog szerepel (s\u00e1rga h\u00e1tt\u00e9r).
+plugin.setting.coloring.help=Ki \u00e9s be kapcsolhatod a napt\u00e1r kiemel\u0151 funkci\u00f3j\u00e1t. A kiemel\u0151 funcki\u00f3 mutatja a nem munka napnak sz\u00e1m\u00edt\u00f3 napokat h\u00e9tv\u00e9g\u00e9nek megfelel\u0151en (piros sz\u00e1m) \u00e9s a napokat amelyen worklog szerepel (s\u00e1rga h\u00e1tt\u00e9r).
 plugin.setting.fdow=A h\u00e9t els\u0151 napja
 plugin.setting.fdow.sunday=Vas\u00e1rnap
 plugin.setting.fdow.monday=H\u00e9tf\u0151
@@ -111,7 +111,7 @@ plugin.worklog.create.fail= Sikertelen worklog k\u00e9sz\u00edt\u00e9s.
 plugin.worklog.delete.fail= Nem siker\u00fclt t\u00f6r\u00f6lni a worklogot a k\u00f6vetkez\u0151 ID-val:
 plugin.worklog.update.fail= Sikertelen worklog friss\u00edt\u00e9s.
 plugin.wrong.dates= A lek\u00e9r\u00e9s d\u00e1tum param\u00e9terei nem megfelel\u0151ek.
-plugin.calendar.logged.coloring.fail= A kalend\u00e1rnak nem siker\u00fclt \u00f6sszegy\u0171jteni a loggal rendelkez\u0151 napokat.
+plugin.calendar.logged.coloring.fail= A napt\u00e1rnak nem siker\u00fclt \u00f6sszegy\u0171jteni a loggal rendelkez\u0151 napokat.
 plugin.worklog.permission.warning= El\u0151fordulhat, hogy léteznek a feltételeknek megfelel\u0151 worklogok, de nincs joga azokat megtekinteni.
 
 plugin.worklog.update.success= Sikeres worklog szerkeszt\u00e9s.
