Changed the worklog querys from SQL to API style changed Everit logo link

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -28,7 +28,7 @@ plugin.end= End
 plugin.duration= Duration
 plugin.note= Note
 plugin.edit= Edit
-plugin.edit.all=Edit All
+plugin.edit.all=Change Date For All
 plugin.save= Save
 plugin.settings= Settings
 plugin.delete= Delete
