fixed unicode character in properties file

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -28,7 +28,7 @@ plugin.end= V\u00e9ge
 plugin.duration= Id\u0151tartam
 plugin.note= Jegyzet
 plugin.edit= Szerkeszt\u00e9s
-plugin.edit.all=\u00d6sszes Dátum Szerkeszt\u00e9se
+plugin.edit.all=\u00d6sszes D\u00e1tum Szerkeszt\u00e9se
 plugin.save= Ment\u00e9s
 plugin.settings= Be\u00e1ll\u00edt\u00e1sok
 plugin.delete= T\u00f6rl\u00e9s
@@ -56,7 +56,7 @@ plugin.parent.issue=Sz\u00fcl\u0151 Issue:
 
 plugin.setting.calendar.appearance=Napt\u00e1r megjelen\u00e9se
 plugin.setting.calendar=Napt\u00e1r
-plugin.setting.calendar.settings.help=Egys\u00e9ges napt\u00e1r be\u00e1llít\u00e1sok az \u00d6sszes felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra.
+plugin.setting.calendar.settings.help=Egys\u00e9ges napt\u00e1r be\u00e1ll\ufffdt\u00e1sok az \u00d6sszes felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra.
 plugin.setting.working.day=Munkanapok
 plugin.setting.ispopup=T\u00edpusa
 plugin.setting.isactualdate=Alap\u00e9rtelmezett d\u00e1tum
@@ -112,7 +112,7 @@ plugin.worklog.delete.fail= Nem siker\u00fclt t\u00f6r\u00f6lni a worklogot a k\
 plugin.worklog.update.fail= Sikertelen worklog friss\u00edt\u00e9s.
 plugin.wrong.dates= A lek\u00e9r\u00e9s d\u00e1tum param\u00e9terei nem megfelel\u0151ek.
 plugin.calendar.logged.coloring.fail= A napt\u00e1rnak nem siker\u00fclt \u00f6sszegy\u0171jteni a loggal rendelkez\u0151 napokat.
-plugin.worklog.permission.warning= El\u0151fordulhat, hogy léteznek a feltételeknek megfelel\u0151 worklogok, de nincs joga azokat megtekinteni.
+plugin.worklog.permission.warning= El\u0151fordulhat, hogy l\ufffdteznek a felt\ufffdteleknek megfelel\u0151 worklogok, de nincs joga azokat megtekinteni.
 
 plugin.worklog.update.success= Sikeres worklog szerkeszt\u00e9s.
 plugin.worklog.create.success= Sikeres worklog k\u00e9sz\u00edt\u00e9s.
