localized button titles

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -51,7 +51,14 @@ plugin.user = User
 plugin.start.time.dec.title=Decrease the Start Time with 
 plugin.start.time.inc.title=Increase the Start Time with 
 plugin.end.time.dec.title=Decrease the End Time with 
-plugin.end.time.inc.title=Increase the End Time with 
+plugin.end.time.inc.title=Increase the End Time with
+plugin.next.day=Next day
+plugin.next.week=Next week
+plugin.next.month=Next month
+plugin.prev.day=Previous day
+plugin.prev.week=Previous week
+plugin.prev.month= Previous month
+plugin.choose.date=Pick a date
 plugin.parent.issue=Parent Issue:
 
 plugin.setting.calendar.appearance=Calendar appearance
