--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -52,6 +52,13 @@ plugin.start.time.dec.title=Cs\u00f6kkenti a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.start.time.inc.title=N\u00f6veli a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
 plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
+plugin.next.day=K\u00f6vetkez\u0151 nap
+plugin.next.week=K\u00f6vetkez\u0151 h\u00e9t
+plugin.next.month=K\u00f6vetkez\u0151 h\u00f3nap
+plugin.prev.day=El\u0151z\u0151 nap
+plugin.prev.week=El\u0151z\u0151 h\u00e9t
+plugin.prev.month= El\u0151z\u0151 h\u00f3nap
+plugin.choose.date=V\u00e1lassz d\u00e1tumot
 plugin.parent.issue=Sz\u00fcl\u0151 Issue:
 
 plugin.setting.calendar.appearance=Napt\u00e1r megjelen\u00e9se
