added Table Report feature bug fixes: https://github.com/everit-org/jira-timetracker-plugin/issues/51 https://github.com/everit-org/jira-timetracker-plugin/issues/52

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -25,10 +25,11 @@ plugin.week= H\u00e9t
 plugin.day= Nap
 plugin.start= Kezd\u00e9s
 plugin.end= V\u00e9ge
+plugin.date= D\u00e1tum
 plugin.duration= Id\u0151tartam
 plugin.note= Jegyzet
 plugin.edit= Szerkeszt\u00e9s
-plugin.edit.all=Összes Dátum Szerkesztése
+plugin.edit.all=\u00d6sszes D\u00e1tum Szerkeszt\u00e9se
 plugin.save= Ment\u00e9s
 plugin.settings= Be\u00e1ll\u00edt\u00e1sok
 plugin.delete= T\u00f6rl\u00e9s
@@ -40,6 +41,7 @@ plugin.submit= Hozz\u00e1ad\u00e1s
 plugin.submit.close= Ment\u00e9s \u00e9s Bez\u00e1r\u00e1s
 plugin.cancel= M\u00e9gse
 plugin.now= Most
+plugin.work= Munka
 plugin.real.work= Val\u00f3s Munka
 plugin.dates= D\u00e1tumok
 plugin.search= Keres\u00e9s
@@ -52,11 +54,21 @@ plugin.start.time.dec.title=Cs\u00f6kkenti a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.start.time.inc.title=N\u00f6veli a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
 plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
+plugin.next.day=K\u00f6vetkez\u0151 nap
+plugin.next.week=K\u00f6vetkez\u0151 h\u00e9t
+plugin.next.month=K\u00f6vetkez\u0151 h\u00f3nap
+plugin.prev.day=El\u0151z\u0151 nap
+plugin.prev.week=El\u0151z\u0151 h\u00e9t
+plugin.prev.month= El\u0151z\u0151 h\u00f3nap
+plugin.choose.date=V\u00e1lassz d\u00e1tumot
 plugin.parent.issue=Sz\u00fcl\u0151 Issue:
+plugin.daily=Napi
+plugin.weekly=Heti
+plugin.monthly=Havi
 
 plugin.setting.calendar.appearance=Napt\u00e1r megjelen\u00e9se
 plugin.setting.calendar=Napt\u00e1r
-plugin.setting.calendar.settings.help=Egys\u00e9ges napt\u00e1r be\u00e1llít\u00e1sok az \u00d6sszes felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra.
+plugin.setting.calendar.settings.help=Egys\u00e9ges napt\u00e1r be\u00e1ll\u00edt\u00e1sok az \u00d6sszes felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra.
 plugin.setting.working.day=Munkanapok
 plugin.setting.ispopup=T\u00edpusa
 plugin.setting.isactualdate=Alap\u00e9rtelmezett d\u00e1tum
@@ -67,13 +79,13 @@ plugin.setting.inline=\u00c1lland\u00f3
 plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa napt\u00e1r
 plugin.setting.current=Mai d\u00e1tum
 plugin.setting.last=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
-plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak 8 \u00f3r\u00e1nyni munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00f3l\u00f3 nem dolgozik 8 \u00f3r\u00e1t egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A napt\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151 napnak sz\u00e1m\u00edt.
+plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak 8 \u00f3r\u00e1nyni munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00e1l\u00f3 nem dolgozik 8 \u00f3r\u00e1t egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A napt\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151napnak sz\u00e1m\u00edt.
 plugin.setting.exclude.dates=Nem sz\u00e1m\u00edt\u00f3 d\u00e1tumok
 plugin.setting.include.dates=Bele sz\u00e1m\u00edt\u00f3 d\u00e1tumok
-plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a napt\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00f3 napt\u00e1rt a Timetrecker oldal\u00e1n.
-plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a napt\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki ntm t\u00f6lt\u00f6tt napj\u00e1t mutassa.
+plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a napt\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00fa napt\u00e1rt a Timetracker oldal\u00e1n.
+plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a napt\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki nem t\u00f6lt\u00f6tt napj\u00e1t mutassa.
 plugin.setting.non.working.issues.help=Az issue-k amelyek megfelelnek a list\u00e1ban szerepl\u0151 regul\u00e1ris kifejez\u00e9seknek nem lesznek figyelembe v\u00e9ve a "Val\u00f3s Munka \u00d6sszes\u00edt\u00e9s"-ben.
-plugin.setting.nonestimated.issues.help=Alap\u00e9rtelmezetten egy lev\u00e9l lesz k\u00fcldve minden nap a nem lez\u00e1rt issue-kr\u00f3l ahol worklog keletkezett de nincs t\u00f6bb h\u00e1tral\u00e9v\u0151 id\u0151, issue reporter \u00e9s a project vezet\u0151 kapja a levelet. Ezzel a be\u00e1ll\u00edt\u00e1ssal az adminisztr\u00e1torok egy regul\u00e1ris kifejezez\u00e9s list\u00e1t adhatnak meg, hogy melyik issue-k maradjanak ki az ellen\u0151rz\u00e9sb\u0151l. P\u00e9ld\u00e1k: Ha nem akarsz emial-t kapni semmir\u0151l, akkor a ".*" be\u00e1ll\u00edt\u00e1sra van sz\u00fcks\u00e9ged. Ha nem akarod a "MYPROJECT" bele\u00e9rteni akkor neked a k\u00f6vetkez\u0151 kifejez\u00e9st kell megadnod a list\u00e1ba "MYPROJECT-.*".
+plugin.setting.nonestimated.issues.help=Alap\u00e9rtelmezetten egy lev\u00e9l lesz k\u00fcldve minden nap a nem lez\u00e1rt issue-kr\u00f3l ahol worklog keletkezett de nincs t\u00f6bb h\u00e1tral\u00e9v\u0151 id\u0151, issue reporter \u00e9s a project vezet\u0151 kapja a levelet. Ezzel a be\u00e1ll\u00edt\u00e1ssal az adminisztr\u00e1torok egy regul\u00e1ris kifejezez\u00e9s list\u00e1t adhatnak meg, hogy melyik issue-k maradjanak ki az ellen\u0151rz\u00e9sb\u0151l. P\u00e9ld\u00e1k: Ha nem akarsz email-t kapni semmir\u0151l, akkor a ".*" be\u00e1ll\u00edt\u00e1sra van sz\u00fcks\u00e9ged. Ha nem akarod a "MYPROJECT" bele\u00e9rteni akkor neked a k\u00f6vetkez\u0151 kifejez\u00e9st kell megadnod a list\u00e1ba "MYPROJECT-.*".
 plugin.setting.exclude.dates.help=H\u00e9tk\u00f6znapok list\u00e1ja amelyek nem sz\u00e1m\u00edtanak munkanapnak (P\u00e9ld\u00e1ul: nemzeti \u00fcnnepek). A d\u00e1tumok form\u00e1tuma yyyy-MM-dd (2013-01-01) az elv\u00e1laszt\u00f3jel pedig ",".
 plugin.setting.include.dates.help=H\u00e9tv\u00e9gi napok list\u00e1ja amelyek munkanapnak sz\u00e1m\u00edtanak. A d\u00e1tumok form\u00e1tuma yyyy-MM-dd (2013-01-01) az elv\u00e1laszt\u00f3jel pedig ",".
 plugin.parse.exception.exclude=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok: 
@@ -83,7 +95,7 @@ plugin.setting.end.time.change.wrong=A V\u00e9ge mez\u0151t \u00e1ll\u00edt\u00f
 plugin.settings.time.format=Hiba t\u00f6rt\u00e9nt az id\u0151 feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s \u00e9rt\u00e9k: 
 plugin.setting.input.fields.settings=Beviteli mez\u0151k be\u00e1ll\u00edt\u00e1sa
 plugin.setting.starttime.value=Kezd\u0151 mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
-plugin.setting.starttime.help=Megadhat\u00f3 a Kezd\u0151 mez\u0151 Most gombj\u00e1nak kerkek\u00edt\u0151 funkci\u00f3j\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
+plugin.setting.starttime.help=Megadhat\u00f3 a Kezd\u0151 mez\u0151 Most gombj\u00e1nak kerek\u00edt\u0151 funkci\u00f3j\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.endtime.value=V\u00e9ge mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
 plugin.setting.endtime.help=Megadhat\u00f3 a V\u00e9ge mez\u0151 Most gombj\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.min= perc
@@ -96,7 +108,7 @@ plugin.setting.fdow.monday=H\u00e9tf\u0151
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint 8 \u00f3ra.
 plugin.missing.days.nonworking=Nem val\u00f3s feladatok kiz\u00e1r\u00e1sa. 
-plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1lltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
+plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1ltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
 plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
 plugin.no.worklogs= Nincs megjelen\u00edtend\u0151 adat!
 plugin.invalid_startTime= \u00c9rv\u00e9nytelen kezd\u00e9si id\u0151!
@@ -112,10 +124,11 @@ plugin.worklog.delete.fail= Nem siker\u00fclt t\u00f6r\u00f6lni a worklogot a k\
 plugin.worklog.update.fail= Sikertelen worklog friss\u00edt\u00e9s.
 plugin.wrong.dates= A lek\u00e9r\u00e9s d\u00e1tum param\u00e9terei nem megfelel\u0151ek.
 plugin.calendar.logged.coloring.fail= A napt\u00e1rnak nem siker\u00fclt \u00f6sszegy\u0171jteni a loggal rendelkez\u0151 napokat.
-plugin.worklog.permission.warning= El\u0151fordulhat, hogy léteznek a feltételeknek megfelel\u0151 worklogok, de nincs joga azokat megtekinteni.
+plugin.worklog.permission.warning= El\u0151fordulhat, hogy l\u00e9teznek a felt\u00e9teleknek megfelel\u0151 worklogok, de nincs joga azokat megtekinteni.
 
 plugin.worklog.update.success= Sikeres worklog szerkeszt\u00e9s.
 plugin.worklog.create.success= Sikeres worklog k\u00e9sz\u00edt\u00e9s.
 plugin.worklog.delete.success= Sikeres worklog t\u00f6rl\u00e9s. A worklog ID:
+plugin.exceeded.year= A maxim\u00e1lisan lek\u00e9rdezhet\u0151 id\u0151tartam egy \u00e9v.
 
-plugin.user.picker.label=V\u00e1lasz Felhaszn\u00e1l\u00f3t
+plugin.user.picker.label=V\u00e1lassz Felhaszn\u00e1l\u00f3t
