--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -25,6 +25,7 @@ plugin.week= Week
 plugin.day= Day
 plugin.start= Start
 plugin.end= End
+plugin.date= Date
 plugin.duration= Duration
 plugin.note= Note
 plugin.edit= Edit
@@ -40,6 +41,7 @@ plugin.submit= Submit
 plugin.submit.close= Submit and Close
 plugin.cancel= Cancel
 plugin.now= Now
+plugin.work= Work
 plugin.real.work= Real Work
 plugin.dates= Dates
 plugin.search= Search
@@ -51,8 +53,18 @@ plugin.user = User
 plugin.start.time.dec.title=Decrease the Start Time with 
 plugin.start.time.inc.title=Increase the Start Time with 
 plugin.end.time.dec.title=Decrease the End Time with 
-plugin.end.time.inc.title=Increase the End Time with 
+plugin.end.time.inc.title=Increase the End Time with
+plugin.next.day=Next day
+plugin.next.week=Next week
+plugin.next.month=Next month
+plugin.prev.day=Previous day
+plugin.prev.week=Previous week
+plugin.prev.month= Previous month
+plugin.choose.date=Pick a date
 plugin.parent.issue=Parent Issue:
+plugin.daily=Daily
+plugin.weekly=Weekly
+plugin.monthly=Monthly
 
 plugin.setting.calendar.appearance=Calendar appearance
 plugin.setting.calendar=Calendar
@@ -113,6 +125,7 @@ plugin.worklog.update.fail= Unsuccessful worklog update.
 plugin.wrong.dates= The date parameters of the query are not set appropriate.
 plugin.calendar.logged.coloring.fail= The calendar fail to collect the month logged days.
 plugin.worklog.permission.warning= Maybe there are worklogs matching the conditions but you don't have permission to see them.
+plugin.exceeded.year= The maximum queryable period is one year.
 
 plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
