--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -25,6 +25,7 @@ plugin.week= H\u00e9t
 plugin.day= Nap
 plugin.start= Kezd\u00e9s
 plugin.end= V\u00e9ge
+plugin.date= D\u00e1tum
 plugin.duration= Id\u0151tartam
 plugin.note= Jegyzet
 plugin.edit= Szerkeszt\u00e9s
@@ -40,6 +41,7 @@ plugin.submit= Hozz\u00e1ad\u00e1s
 plugin.submit.close= Ment\u00e9s \u00e9s Bez\u00e1r\u00e1s
 plugin.cancel= M\u00e9gse
 plugin.now= Most
+plugin.work= Munka
 plugin.real.work= Val\u00f3s Munka
 plugin.dates= D\u00e1tumok
 plugin.search= Keres\u00e9s
@@ -60,6 +62,9 @@ plugin.prev.week=El\u0151z\u0151 h\u00e9t
 plugin.prev.month= El\u0151z\u0151 h\u00f3nap
 plugin.choose.date=V\u00e1lassz d\u00e1tumot
 plugin.parent.issue=Sz\u00fcl\u0151 Issue:
+plugin.daily=Napi
+plugin.weekly=Heti
+plugin.monthly=Havi
 
 plugin.setting.calendar.appearance=Napt\u00e1r megjelen\u00e9se
 plugin.setting.calendar=Napt\u00e1r
@@ -124,5 +129,6 @@ plugin.worklog.permission.warning= El\u0151fordulhat, hogy l\u00e9teznek a felt\
 plugin.worklog.update.success= Sikeres worklog szerkeszt\u00e9s.
 plugin.worklog.create.success= Sikeres worklog k\u00e9sz\u00edt\u00e9s.
 plugin.worklog.delete.success= Sikeres worklog t\u00f6rl\u00e9s. A worklog ID:
+plugin.exceeded.year= A maxim\u00e1lisan lek\u00e9rdezhet\u0151 id\u0151tartam egy \u00e9v.
 
 plugin.user.picker.label=V\u00e1lassz Felhaszn\u00e1l\u00f3t
