--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -132,3 +132,5 @@ plugin.worklog.delete.success= Sikeres worklog t\u00f6rl\u00e9s. A worklog ID:
 plugin.exceeded.year= A maxim\u00e1lisan lek\u00e9rdezhet\u0151 id\u0151tartam egy \u00e9v.
 
 plugin.user.picker.label=V\u00e1lassz Felhaszn\u00e1l\u00f3t
+plugin.user.picker.wrong=Ilyen felhaszn\u00e1l\u00f3 nem l\u00e9tezik
+
