fixed timetracker summary calculation

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -131,4 +131,4 @@ plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
 plugin.worklog.delete.success= Success worklog delete. The worklog ID:
 
-plugin.user.picker.label=Select User
+plugin.user.picker.label=Select a user
