refactor to match the new Everit conventions

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -1,22 +1,17 @@
 #
-# Copyright (c) 2011, Everit Kft.
+# Copyright (C) 2011 Everit Kft. (http://www.everit.org)
 #
-# All rights reserved.
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
 #
-# This library is free software; you can redistribute it and/or
-# modify it under the terms of the GNU Lesser General Public
-# License as published by the Free Software Foundation; either
-# version 3 of the License, or (at your option) any later version.
+#         http://www.apache.org/licenses/LICENSE-2.0
 #
-# This library is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# Lesser General Public License for more details.
-#
-# You should have received a copy of the GNU Lesser General Public
-# License along with this library; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
-# MA 02110-1301  USA
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 #
 
 plugin.summary= Summary:
@@ -50,9 +45,9 @@ plugin.to= To
 plugin.reset = Reset
 plugin.copy = Copy
 plugin.user = User
-plugin.start.time.dec.title=Decrease the Start Time with 
-plugin.start.time.inc.title=Increase the Start Time with 
-plugin.end.time.dec.title=Decrease the End Time with 
+plugin.start.time.dec.title=Decrease the Start Time with
+plugin.start.time.inc.title=Increase the Start Time with
+plugin.end.time.dec.title=Decrease the End Time with
 plugin.end.time.inc.title=Increase the End Time with
 plugin.next.day=Next day
 plugin.next.week=Next week
@@ -88,11 +83,11 @@ plugin.setting.non.working.issues.help=The issues that match any of the regular 
 plugin.setting.nonestimated.issues.help=By default a mail will be sent every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead. With this setting administrators can provide a list of regular expressions which issues should be excluded from the check. Examples: If you do not want to get e-mails at all the ".*" setting is for you. If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
 plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays). The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
 plugin.setting.include.dates.help=List of days that are weekends yet working days. The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
-plugin.parse.exception.exclude=Exception while try to parse the exclude date(s). Wrong dates: 
-plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates: 
+plugin.parse.exception.exclude=Exception while try to parse the exclude date(s). Wrong dates:
+plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates:
 plugin.setting.start.time.change.wrong=The startTime change value not correct. The valid values: 5, 10, 15, 20, 30.
 plugin.setting.end.time.change.wrong=The endTime change value not correct. The valid values: 5, 10, 15, 20, 30.
-plugin.settings.time.format=Exception while try to parse the time. Wrong value: 
+plugin.settings.time.format=Exception while try to parse the time. Wrong value:
 plugin.setting.input.fields.settings=Input fields settings
 plugin.setting.starttime.value=StartTime Change value
 plugin.setting.starttime.help=You can set the value of the startTime input field Now button rounding function. Acceptable values: 5, 10, 15, 20, 30.
@@ -100,15 +95,15 @@ plugin.setting.endtime.value=EndTime Change value
 plugin.setting.endtime.help=You can set the value of the endTime input field Now button rounding function. Acceptable values: 5, 10, 15, 20, 30.
 plugin.setting.min= Minute(s)
 plugin.setting.coloring= Highlights
-plugin.setting.coloring.help=You can turn on/off the calendar highlight function. The highlights show the exclude dates like weekends (red number) and the days with worklog (yellow background).  
+plugin.setting.coloring.help=You can turn on/off the calendar highlight function. The highlights show the exclude dates like weekends (red number) and the days with worklog (yellow background).
 plugin.setting.fdow=First day of the week
 plugin.setting.fdow.sunday=Sunday
 plugin.setting.fdow.monday=Monday
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
-plugin.missing.days.nonworking=Excluding the non-working issues. 
-plugin.statistics.message= The number of the queried dates is: 
+plugin.missing.days.nonworking=Excluding the non-working issues.
+plugin.statistics.message= The number of the queried dates is:
 plugin.no.dates= No date to display!
 plugin.no.worklogs= No data to display!
 plugin.invalid_startTime= Invalid Start Time!
