--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -1,22 +1,17 @@
 #
-# Copyright (c) 2011, Everit Kft.
+# Copyright (C) 2011 Everit Kft. (http://www.everit.org)
 #
-# All rights reserved.
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
 #
-# This library is free software; you can redistribute it and/or
-# modify it under the terms of the GNU Lesser General Public
-# License as published by the Free Software Foundation; either
-# version 3 of the License, or (at your option) any later version.
+#         http://www.apache.org/licenses/LICENSE-2.0
 #
-# This library is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# Lesser General Public License for more details.
-#
-# You should have received a copy of the GNU Lesser General Public
-# License along with this library; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
-# MA 02110-1301  USA
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 #
 
 plugin.summary= \u00d6sszes\u00edt\u00e9s:
@@ -45,15 +40,15 @@ plugin.work= Munka
 plugin.real.work= Val\u00f3s Munka
 plugin.dates= D\u00e1tumok
 plugin.search= Keres\u00e9s
-plugin.from= Innent\u0151l 
+plugin.from= Innent\u0151l
 plugin.to= Id\u00e1ig
 plugin.reset = T\u00f6rl\u00e9s
 plugin.copy = M\u00e1sol\u00e1s
 plugin.user = Felhaszn\u00e1l\u00f3
 plugin.start.time.dec.title=Cs\u00f6kkenti a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.start.time.inc.title=N\u00f6veli a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
-plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
-plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
+plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t
+plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t
 plugin.next.day=K\u00f6vetkez\u0151 nap
 plugin.next.week=K\u00f6vetkez\u0151 h\u00e9t
 plugin.next.month=K\u00f6vetkez\u0151 h\u00f3nap
@@ -88,11 +83,11 @@ plugin.setting.non.working.issues.help=Az issue-k amelyek megfelelnek a list\u00
 plugin.setting.nonestimated.issues.help=Alap\u00e9rtelmezetten egy lev\u00e9l lesz k\u00fcldve minden nap a nem lez\u00e1rt issue-kr\u00f3l ahol worklog keletkezett de nincs t\u00f6bb h\u00e1tral\u00e9v\u0151 id\u0151, issue reporter \u00e9s a project vezet\u0151 kapja a levelet. Ezzel a be\u00e1ll\u00edt\u00e1ssal az adminisztr\u00e1torok egy regul\u00e1ris kifejezez\u00e9s list\u00e1t adhatnak meg, hogy melyik issue-k maradjanak ki az ellen\u0151rz\u00e9sb\u0151l. P\u00e9ld\u00e1k: Ha nem akarsz email-t kapni semmir\u0151l, akkor a ".*" be\u00e1ll\u00edt\u00e1sra van sz\u00fcks\u00e9ged. Ha nem akarod a "MYPROJECT" bele\u00e9rteni akkor neked a k\u00f6vetkez\u0151 kifejez\u00e9st kell megadnod a list\u00e1ba "MYPROJECT-.*".
 plugin.setting.exclude.dates.help=H\u00e9tk\u00f6znapok list\u00e1ja amelyek nem sz\u00e1m\u00edtanak munkanapnak (P\u00e9ld\u00e1ul: nemzeti \u00fcnnepek). A d\u00e1tumok form\u00e1tuma yyyy-MM-dd (2013-01-01) az elv\u00e1laszt\u00f3jel pedig ",".
 plugin.setting.include.dates.help=H\u00e9tv\u00e9gi napok list\u00e1ja amelyek munkanapnak sz\u00e1m\u00edtanak. A d\u00e1tumok form\u00e1tuma yyyy-MM-dd (2013-01-01) az elv\u00e1laszt\u00f3jel pedig ",".
-plugin.parse.exception.exclude=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok: 
-plugin.parse.exception.include=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok: 
+plugin.parse.exception.exclude=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok:
+plugin.parse.exception.include=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok:
 plugin.setting.start.time.change.wrong=A Kezd\u0151 mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.end.time.change.wrong=A V\u00e9ge mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
-plugin.settings.time.format=Hiba t\u00f6rt\u00e9nt az id\u0151 feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s \u00e9rt\u00e9k: 
+plugin.settings.time.format=Hiba t\u00f6rt\u00e9nt az id\u0151 feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s \u00e9rt\u00e9k:
 plugin.setting.input.fields.settings=Beviteli mez\u0151k be\u00e1ll\u00edt\u00e1sa
 plugin.setting.starttime.value=Kezd\u0151 mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
 plugin.setting.starttime.help=Megadhat\u00f3 a Kezd\u0151 mez\u0151 Most gombj\u00e1nak kerek\u00edt\u0151 funkci\u00f3j\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
@@ -107,8 +102,8 @@ plugin.setting.fdow.monday=H\u00e9tf\u0151
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint 8 \u00f3ra.
-plugin.missing.days.nonworking=Nem val\u00f3s feladatok kiz\u00e1r\u00e1sa. 
-plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1ltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
+plugin.missing.days.nonworking=Nem val\u00f3s feladatok kiz\u00e1r\u00e1sa.
+plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1ltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma:
 plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
 plugin.no.worklogs= Nincs megjelen\u00edtend\u0151 adat!
 plugin.invalid_startTime= \u00c9rv\u00e9nytelen kezd\u00e9si id\u0151!
@@ -133,4 +128,3 @@ plugin.exceeded.year= A maxim\u00e1lisan lek\u00e9rdezhet\u0151 id\u0151tartam e
 
 plugin.user.picker.label=V\u00e1lassz Felhaszn\u00e1l\u00f3t
 plugin.user.picker.wrong=Ilyen felhaszn\u00e1l\u00f3 nem l\u00e9tezik
-
