Show remaining estimate in time tracker table, and if it's 0, show it in red.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -22,6 +22,7 @@ plugin.start= Kezd\u00e9s
 plugin.end= V\u00e9ge
 plugin.date= D\u00e1tum
 plugin.duration= Id\u0151tartam
+plugin.remaining=H\u00e1travan
 plugin.note= Jegyzet
 plugin.edit= Szerkeszt\u00e9s
 plugin.edit.all=\u00d6sszes D\u00e1tum Szerkeszt\u00e9se
