--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -22,6 +22,7 @@ plugin.start= Start
 plugin.end= End
 plugin.date= Date
 plugin.duration= Duration
+plugin.remaining=Remaining
 plugin.note= Note
 plugin.edit= Edit
 plugin.edit.all=Change Date For All
