--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -28,6 +28,7 @@ plugin.edit.all=Change Date For All
 plugin.save= Save
 plugin.settings= Settings
 plugin.delete= Delete
+plugin.actions=Actions
 plugin.add.worklog= Add Worklog
 plugin.start.time= Start Time
 plugin.end.time= End Time
