Added missing keys.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -22,12 +22,14 @@ plugin.start= Start
 plugin.end= End
 plugin.date= Date
 plugin.duration= Duration
+plugin.remaining= Remaining
 plugin.note= Note
 plugin.edit= Edit
 plugin.edit.all=Change Date For All
 plugin.save= Save
 plugin.settings= Settings
 plugin.delete= Delete
+plugin.actions= Actions
 plugin.add.worklog= Add Worklog
 plugin.start.time= Start Time
 plugin.end.time= End Time
