Added feedback dialog to JTWA and ASWA

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -129,3 +129,15 @@ plugin.worklog.create.success= Success worklog create.
 plugin.worklog.delete.success= Success worklog delete. The worklog ID:
 
 plugin.user.picker.label= Select a user
+
+jttp.close=Close
+jttp.send=Send
+jttp.send.feedback=Give feedback
+jttp.feedback.msg=Please send us your comments and suggestions about the Timetracker Plugin.
+jttp.feedback.header=Comments/Suggestions
+jttp.feedback.rate=Please rate the plugin:
+jttp.feedback.star1=Horrible
+jttp.feedback.star2=Bad
+jttp.feedback.star3=Meh
+jttp.feedback.star4=Good
+jttp.feedback.star5=Awesome
