--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -129,3 +129,15 @@ plugin.worklog.delete.success= Sikeres worklog t\u00f6rl\u00e9s. A worklog ID:
 plugin.exceeded.year= A maxim\u00e1lisan lek\u00e9rdezhet\u0151 id\u0151tartam egy \u00e9v.
 
 plugin.user.picker.label=V\u00e1lassz Felhaszn\u00e1l\u00f3t
+
+jttp.close=Bez\u00e1r\u00e1s
+jttp.send=K\u00fcld\u00e9s
+jttp.send.feedback=\u00c9rt\u00e9kelem a programot
+jttp.feedback.msg=K\u00fcldd el nek\u00fcnk javaslataid, \u00e9szrev\u00e9teleid a Timetracker Plugin-nal kapcsolatban.
+jttp.feedback.header=\u00c9szrev\u00e9telek/Javaslatok
+jttp.feedback.rate=K\u00e9rlek \u00e9rt\u00e9keld a plugint:
+jttp.feedback.star1=Sz\u00f6rny\u0171
+jttp.feedback.star2=Rossz
+jttp.feedback.star3=Meh
+jttp.feedback.star4=J\u00f3
+jttp.feedback.star5=Fantasztikus
