Refactored and extended sendFeedBack
Add jttp_build.porperties.
Refactore the method. (anonymus mail send, optional mail address).
Check mail server and set default from mail.
Feedback dialog check empty comment and mail server too.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -141,3 +141,6 @@ jttp.feedback.star2=Rossz
 jttp.feedback.star3=Meh
 jttp.feedback.star4=J\u00f3
 jttp.feedback.star5=Fantasztikus
+jttp.feedback.customer.mail=Email c\u00edm
+jttp.feedback.missing=A megjegyz\u00e9s r\u00e9sz kit\u00f6lt\u00e9se k\u00f6telez\u0151
+jttp.feedback.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00edtva
