--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -141,3 +141,6 @@ jttp.feedback.star2=Bad
 jttp.feedback.star3=Meh
 jttp.feedback.star4=Good
 jttp.feedback.star5=Awesome
+jttp.feedback.customer.mail=Email
+jttp.feedback.missing=The comment is required
+jttp.feedback.no.mail=There is no setted Mailing Server
