Radiobutton for analytics tracking

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -101,6 +101,10 @@ plugin.setting.coloring.help=You can turn on/off the calendar highlight function
 plugin.setting.fdow=First day of the week
 plugin.setting.fdow.sunday=Sunday
 plugin.setting.fdow.monday=Monday
+plugin.settings.analytics=Analytics
+plugin.settings.analytics.help=The add-on collects anonymous usage data, which allows us to measure user experience. All  sensitive data is encrypted before being uploaded.
+plugin.settings.analytics.radiobutton.enable=Enable
+plugin.settings.analytics.radiobutton.disable=Disable
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
