New line end of file and jttp.porpety fix

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -143,4 +143,4 @@ jttp.feedback.star4=Good
 jttp.feedback.star5=Awesome
 jttp.feedback.customer.mail=Email
 jttp.feedback.missing=The comment is required
-jttp.feedback.no.mail=There is no setted Mailing Server
+jttp.feedback.no.mail=No JIRA mail server has been defined
