Fixed properties. And remove error message when reload dialog.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -133,14 +133,14 @@ plugin.user.picker.label=V\u00e1lassz Felhaszn\u00e1l\u00f3t
 jttp.close=Bez\u00e1r\u00e1s
 jttp.send=K\u00fcld\u00e9s
 jttp.send.feedback=\u00c9rt\u00e9kelem a programot
-jttp.feedback.msg=K\u00fcldd el nek\u00fcnk javaslataid, \u00e9szrev\u00e9teleid a Timetracker Plugin-nal kapcsolatban.
-jttp.feedback.header=\u00c9szrev\u00e9telek/Javaslatok
-jttp.feedback.rate=K\u00e9rlek \u00e9rt\u00e9keld a plugint:
+jttp.feedback.msg=\u00cdrja le \u00e9szrev\u00e9teleit
+jttp.feedback.header=\u00c9szrev\u00e9telek
+jttp.feedback.rate=\u00c9rt\u00e9kelje a plugint
 jttp.feedback.star1=Sz\u00f6rny\u0171
 jttp.feedback.star2=Rossz
 jttp.feedback.star3=Meh
 jttp.feedback.star4=J\u00f3
 jttp.feedback.star5=Fantasztikus
-jttp.feedback.customer.mail=Email c\u00edm
+jttp.feedback.customer.mail=Email c\u00edm (opcion\u00e1lis)
 jttp.feedback.missing=A megjegyz\u00e9s r\u00e9sz kit\u00f6lt\u00e9se k\u00f6telez\u0151
 jttp.feedback.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00edtva
