Radio button for analytics

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -99,6 +99,10 @@ plugin.setting.coloring.help=Ki \u00e9s be kapcsolhatod a napt\u00e1r kiemel\u01
 plugin.setting.fdow=A h\u00e9t els\u0151 napja
 plugin.setting.fdow.sunday=Vas\u00e1rnap
 plugin.setting.fdow.monday=H\u00e9tf\u0151
+plugin.settings.analytics=Analitika
+plugin.settings.analytics.help=A felhaszn\u00e1l\u00f3i \u00e9lm\u00e9ny jav\u00edt\u00e1sa \u00e9rdek\u00e9ben ez az add-on haszn\u00e1lati adatokat gy\u0171jt. Minden \u00e9rz\u00e9keny adat titkos\u00edt\u00e1sra ker\u00fcl.
+plugin.settings.analytics.radiobutton.enable=Enged\u00e9lyez
+plugin.settings.analytics.radiobutton.disable=Letilt
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint 8 \u00f3ra.
