Added title to columns

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -148,3 +148,11 @@ jttp.feedback.star5=Awesome
 jttp.feedback.customer.mail=Email address (optional)
 jttp.feedback.missing=Feedback text is required
 jttp.feedback.no.mail=No JIRA mail server has been defined
+
+jttp.list.title.issue=Issue code to which the worklog belongs.
+jttp.list.title.remaning=Remaining time on the issue.
+jttp.list.title.start=Start date of the worklog.
+jttp.list.title.end=End date of the worklog.
+jttp.list.title.duration=The time between the start and the end date.
+jttp.list.title.note=Description of the worklog.
+jttp.list.title.actions=Edit, Delete, Copy
