--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -148,3 +148,11 @@ jttp.feedback.star5=Fantasztikus
 jttp.feedback.customer.mail=Email c\u00edm (opcion\u00e1lis)
 jttp.feedback.missing=A megjegyz\u00e9s r\u00e9sz kit\u00f6lt\u00e9se k\u00f6telez\u0151
 jttp.feedback.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00edtva
+
+jttp.list.title.issue=Az Issue, amihez a k\u00f6nyvelt id\u0151 tartozik.
+jttp.list.title.remaning=Fennmarad\u00f3 id\u0151 az Issue-n.
+jttp.list.title.start=A k\u00f6nyvelt id\u0151 kezdete.
+jttp.list.title.end=A k\u00f6nyvelt id\u0151 v\u00e9ge.
+jttp.list.title.duration=A k\u00f6nyvelt id\u0151 kezdete \u00e9s v\u00e9ge k\u00f6z\u00f6tti id\u0151.
+jttp.list.title.note=Az elv\u00e9gzett munka le\u00edr\u00e1sa.
+jttp.list.title.actions=Szerkeszt\u00e9s, T\u00f6rl\u00e9s, M\u00e1sol\u00e1s
