Fixed porpeties typo.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -150,7 +150,7 @@ jttp.feedback.missing=A megjegyz\u00e9s r\u00e9sz kit\u00f6lt\u00e9se k\u00f6tel
 jttp.feedback.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00edtva
 
 jttp.list.title.issue=Az Issue, amihez a k\u00f6nyvelt id\u0151 tartozik.
-jttp.list.title.remaning=Fennmarad\u00f3 id\u0151 az Issue-n.
+jttp.list.title.remaining=Fennmarad\u00f3 id\u0151 az Issue-n.
 jttp.list.title.start=A k\u00f6nyvelt id\u0151 kezdete.
 jttp.list.title.end=A k\u00f6nyvelt id\u0151 v\u00e9ge.
 jttp.list.title.duration=A k\u00f6nyvelt id\u0151 kezdete \u00e9s v\u00e9ge k\u00f6z\u00f6tti id\u0151.
