--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -150,7 +150,7 @@ jttp.feedback.missing=Feedback text is required
 jttp.feedback.no.mail=No JIRA mail server has been defined
 
 jttp.list.title.issue=Issue code to which the worklog belongs.
-jttp.list.title.remaning=Remaining time on the issue.
+jttp.list.title.remaining=Remaining time on the issue.
 jttp.list.title.start=Start date of the worklog.
 jttp.list.title.end=End date of the worklog.
 jttp.list.title.duration=The time between the start and the end date.
