Refactored feedback dialog. Fixed missing logo error. Refactored feedback link. Added feedback to all page. Fixed some parse error in chart and table reports.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -138,7 +138,7 @@ jttp.close=Bez\u00e1r\u00e1s
 jttp.send=K\u00fcld\u00e9s
 jttp.send.feedback=\u00c9rt\u00e9kelem a programot
 jttp.feedback.msg=\u00cdrja le \u00e9szrev\u00e9teleit
-jttp.feedback.header=\u00c9szrev\u00e9telek
+jttp.feedback.header=Timetracker \u00e9szrev\u00e9telek
 jttp.feedback.rate=\u00c9rt\u00e9kelje a plugint
 jttp.feedback.star1=Sz\u00f6rny\u0171
 jttp.feedback.star2=Rossz
