Added more detials to email tooltip.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -148,7 +148,7 @@ jttp.feedback.star5=Fantasztikus
 jttp.feedback.customer.mail=Email c\u00edm (opcion\u00e1lis)
 jttp.feedback.missing=A megjegyz\u00e9s r\u00e9sz kit\u00f6lt\u00e9se k\u00f6telez\u0151
 jttp.feedback.no.mail=Nincs megfelel\u0151 levelez\u0151 szerver be\u00e1ll\u00edtva
-jttp.feedback.mail.help=K\u00e9rem adja meg az email c\u00edm\u00e9t, ha szeretn\u00e9, hogy a visszajelz\u00e9se kapcs\u00e1n felvegy\u00fck \u00d6nnel a kapcsolatot.
+jttp.feedback.mail.help=K\u00e9rem adja meg az email c\u00edm\u00e9t, ha szeretn\u00e9, hogy a visszajelz\u00e9se kapcs\u00e1n felvegy\u00fck \u00d6nnel a kapcsolatot. A megadott email c\u00edmet m\u00e1s c\u00e9lra nem haszn\u00e1ljuk fel, azt harmadik f\u00e9lnek nem adjuk ki.
 
 jttp.list.title.issue=Az Issue, amihez a k\u00f6nyvelt id\u0151 tartozik.
 jttp.list.title.remaining=Fennmarad\u00f3 id\u0151 az Issue-n.
