--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -148,7 +148,7 @@ jttp.feedback.star5=Awesome
 jttp.feedback.customer.mail=Email (optional)
 jttp.feedback.missing=Feedback text is required
 jttp.feedback.no.mail=No JIRA mail server has been defined
-jttp.feedback.mail.help=Please provide your e-mail address if you would like us to contact you about your feedback.
+jttp.feedback.mail.help=Please provide your e-mail address if you would like us to contact you about your feedback.  We will not use your email for any other purpose and we will never share it with any third party company.
 
 jttp.list.title.issue=Issue code to which the worklog belongs.
 jttp.list.title.remaining=Remaining time on the issue.
