set version to 1.4.3-SNAPSHOT added analytics script fix and new description.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -100,7 +100,7 @@ plugin.setting.fdow=First day of the week
 plugin.setting.fdow.sunday=Sunday
 plugin.setting.fdow.monday=Monday
 plugin.settings.analytics=Analytics
-plugin.settings.analytics.help=The add-on collects anonymous usage data, which allows us to measure user experience. All  sensitive data is encrypted before being uploaded.
+plugin.settings.analytics.help=In order to enhance the features of the add-on, we need to understand how our customers use Timetracker. To achieve this, we would like to collect anonymous data about the usage: <ul> <li> Anonymized IP address (to be able to create statistics about the usage in the different countries) </li><li> Hash of the domain address of the JIRA system (we will not know your domain address) </li><li> Hash of the user (we will not know your original user id) </li><li> Usage count of the time tracking feature </li><li> Usage count of the Missing Days Report </li><li> Usage count of the Chart Report </li><li> Usage count of the Table Report </li><li> User Agent of the browser being used </li><li> Timetracker version number </li></ul>
 plugin.settings.analytics.radiobutton.enable=Enable
 plugin.settings.analytics.radiobutton.disable=Disable
 
