Added worklog modification permission checks.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -157,3 +157,7 @@ jttp.list.title.end=End date of the worklog.
 jttp.list.title.duration=The time between the start and the end date.
 jttp.list.title.note=Description of the worklog.
 jttp.list.title.actions=Edit, Delete, Copy
+
+jttp.nopermission.worklog.update=You don't have permission to update worklog in the issue:
+jttp.nopermission.worklog.delete=You don't have permission to delete worklog in the issue:
+jttp.nopermission.worklog.create=You don't have permission to create worklog in the issue:
