--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -157,3 +157,8 @@ jttp.list.title.end=A k\u00f6nyvelt id\u0151 v\u00e9ge.
 jttp.list.title.duration=A k\u00f6nyvelt id\u0151 kezdete \u00e9s v\u00e9ge k\u00f6z\u00f6tti id\u0151.
 jttp.list.title.note=Az elv\u00e9gzett munka le\u00edr\u00e1sa.
 jttp.list.title.actions=Szerkeszt\u00e9s, T\u00f6rl\u00e9s, M\u00e1sol\u00e1s
+
+jttp.nopermission.worklog.update=Nincs jogosults\u00e1god worklogot szerkeszteni a issue-n:
+jttp.nopermission.worklog.delete=Nincs jogosults\u00e1god worklogot t\u00f6r\u00f6lni a issue-n:
+jttp.nopermission.worklog.create=Nincs jogosults\u00e1god worklogot l\u00e9trehozni a issue-n:
+
