Working hours per day will be loaded from time tracking configuration

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -76,7 +76,7 @@ plugin.setting.inline=Inline
 plugin.setting.both=Both types of calendars
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
-plugin.setting.working.day.help=By default all users have to fill at least 8 ours of working time for each working day. In case a user did not work 8 hours a day they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
+plugin.setting.working.day.help=By default all users have to fill at least as many working time for each working day as is set in the "Time Tracking" settings. In case a user did not work as many time as expected they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
 plugin.setting.exclude.dates=Exclude dates
 plugin.setting.include.dates=Include dates
 plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup, inline calendar or both type in the Timetracker page.
@@ -107,7 +107,7 @@ plugin.settings.analytics.radiobutton.enable=Enable
 plugin.settings.analytics.radiobutton.disable=Disable
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
-plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
+plugin.missing.days.hours=Check the worklog spent time is equal or greater to the time is expected a day.
 plugin.missing.days.nonworking=Excluding the non-working issues.
 plugin.statistics.message= The number of the queried dates is:
 plugin.no.dates= No date to display!
