--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -157,3 +157,7 @@ jttp.list.title.end=End date of the worklog.
 jttp.list.title.duration=The time between the start and the end date.
 jttp.list.title.note=Description of the worklog.
 jttp.list.title.actions=Edit, Delete, Copy
+
+jttp.error.title=Timetracker error
+jttp.error.message.title=Something went wrong!
+jttp.error.message.detials=Please report this error on the Timetracker feedback form, so we can fix it as quickly as possible.  Details that are useful in identifying errors and bugs, so please try to explain how can we reproduce the problem.
