--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -157,3 +157,7 @@ jttp.list.title.end=A k\u00f6nyvelt id\u0151 v\u00e9ge.
 jttp.list.title.duration=A k\u00f6nyvelt id\u0151 kezdete \u00e9s v\u00e9ge k\u00f6z\u00f6tti id\u0151.
 jttp.list.title.note=Az elv\u00e9gzett munka le\u00edr\u00e1sa.
 jttp.list.title.actions=Szerkeszt\u00e9s, T\u00f6rl\u00e9s, M\u00e1sol\u00e1s
+
+jttp.error.title=Timetracker error
+jttp.error.message.title=Sajn\u00e1latos m\u00f3don hiba t\u00f6rt\u00e9nt!
+jttp.error.message.detials=K\u00e9rem jelezze a hib\u00e1t sz\u00e1munkra a Timetracker felhaszn\u00e1l\u00f3i visszajelz\u00e9s funcki\u00f3j\u00e1val, hogy azt min\u00e9l hamarabb jav\u00edthassuk. A visszajelz\u00e9s\u00e9ben \u00edrja le a hiba kiv\u00e1lt\u00e1sa el\u0151tti l\u00e9p\u00e9seket, hogy reproduk\u00e1lni tudjuk azt.
