--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -165,3 +165,68 @@ jttp.nopermission.worklog.create=You don't have permission to create worklog in 
 jttp.error.title=Timetracker error
 jttp.error.message.title=Something went wrong!
 jttp.error.message.detials=Please report this error on the Timetracker feedback form, so we can fix it as quickly as possible.  Details that are useful in identifying errors and bugs, so please try to explain how can we reproduce the problem.
+
+jttp.reporting.header= Reporting feedback
+jttp.reporting.customer.mail=Email
+jttp.reporting.mail.help=Please provide your e-mail address if you would like us to contact you about your feedback.  We will not use your email for any other purpose and we will never share it with any third party company.
+jttp.reporting.no.mail=No JIRA mail server has been defined
+jttp.reporting.close=Close
+jttp.reporting.send=Send
+
+jttp.reporting.desc=Thank you for your interest. This feature is currently under development.<br/>We want to deliver a flexible work log reporting tool to facilitate the management team work.<br/><br/><strong>To make it even better, we would love to hear your thoughts about it.<strong/>
+jttp.reporting.question.1=Which view do you prefer?
+jttp.reporting.question.2=What search criterias would you use?
+jttp.reporting.question.3=What main dimensions would you use?
+jttp.reporting.question.4=Which detail of the logged work would you like to see?
+jttp.reporting.question.5=How useful would be a gadget to you?
+jttp.reporting.question.6=How useful would be various charts to you? (eg. Pie, Line, Bar)
+jttp.reporting.question.7=What kind of reports would be useful to you?
+jttp.reporting.question.8=Please let us know your suggestions or tell us if anything is missing.
+jttp.reporting.question.9=Which detail of the issue  would you like to see?
+
+jttp.reporting.answer.1.1=Table
+jttp.reporting.answer.1.2=List
+jttp.reporting.answer.1.3=Structured
+jttp.reporting.answer.1.4=Timesheet
+
+jttp.reporting.answer.2.1=Project
+jttp.reporting.answer.2.2=Issue
+jttp.reporting.answer.2.3=Component
+jttp.reporting.answer.2.4=Version
+jttp.reporting.answer.2.5=User/Group
+jttp.reporting.answer.2.6=Issue status
+jttp.reporting.answer.2.7=Issue type
+jttp.reporting.answer.2.8=Custom filter
+
+jttp.reporting.answer.3.1=Project
+jttp.reporting.answer.3.2=Issue
+jttp.reporting.answer.3.3=User
+
+jttp.reporting.answer.4.1=Description
+jttp.reporting.answer.4.2=Duration
+jttp.reporting.answer.4.3=Start/End time
+jttp.reporting.answer.4.4=Created date
+jttp.reporting.answer.4.5=Updated date
+
+jttp.reporting.answer.5.1=Not very
+jttp.reporting.answer.5.2=Nice to have
+jttp.reporting.answer.5.3=It's a must
+
+jttp.reporting.answer.6.1=Not very
+jttp.reporting.answer.6.2=Nice to have
+jttp.reporting.answer.6.3=It's a must
+
+jttp.reporting.answer.9.1=Key
+jttp.reporting.answer.9.2=Summary
+jttp.reporting.answer.9.3=Type
+jttp.reporting.answer.9.4=Status
+jttp.reporting.answer.9.5=Priority
+jttp.reporting.answer.9.6=Resolution
+jttp.reporting.answer.9.7=Versions
+jttp.reporting.answer.9.8=Components
+jttp.reporting.answer.9.9=Assigne
+jttp.reporting.answer.9.10=Reporter
+jttp.reporting.answer.9.11=Created date
+jttp.reporting.answer.9.12=Updated date
+jttp.reporting.answer.9.13=Estimate
+jttp.reporting.answer.9.14=Remaining
